# mcbe-lan-advertizer

./: Cargo.toml  LICENSE  README.md  build.rs  server.properties
src/: config.rs  error.rs  lib.rs  main.rs  pong.rs
src/config/: args.rs  mod.rs  server_properties.rs
