[package]
name = "mcbe-lan-advertizer"
version = "0.1.1"
edition = "2021"
authors = ["max_ishere"]
description = "Listens for Minecraft Bedrock LAN Ping packets and responds with a Pong packet."
repository = "https://github.com/max-ishere/mcbe-lan-advertizer"
license = "MIT"
categories = ["command-line-utilities", "games", "network-programming"]
keywords = ["cli", "minecraft", "mcbe", "mcpe", "mc-lan-games"]

[dependencies]
rand = "0.8"
thiserror = "1.0"
anyhow = "1.0"
[dependencies.clap]
version = "4.5"
features = ["derive"]
